# maze

./: .gitignore  pyproject.toml
src/maze/: game.py
